{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 21,
  "lineage": "01038ceb-7ea0-dceb-3914-3b0c733d11a0",
  "resources": [
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "private_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.3.16.1",
            "id": "europe-west2/example-private-cluster-network-ys0q-subnetwork-private",
            "ip_cidr_range": "10.3.16.0/20",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/global/networks/example-private-cluster-network-ys0q-network",
            "private_ip_google_access": true,
            "project": "fast-planet-243821",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/regions/europe-west2/subnetworks/example-private-cluster-network-ys0q-subnetwork-private"
          }
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "public_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.3.0.1",
            "id": "europe-west2/example-private-cluster-network-ys0q-subnetwork-public",
            "ip_cidr_range": "10.3.0.0/20",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/global/networks/example-private-cluster-network-ys0q-network",
            "private_ip_google_access": true,
            "project": "fast-planet-243821",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/regions/europe-west2/subnetworks/example-private-cluster-network-ys0q-subnetwork-public"
          }
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_all_network_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-06-21T09:30:46.129-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "example-private-cluster-network-ys0q-private-allow-ingress",
            "name": "example-private-cluster-network-ys0q-private-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/global/networks/example-private-cluster-network-ys0q-network",
            "priority": 1000,
            "project": "fast-planet-243821",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/global/firewalls/example-private-cluster-network-ys0q-private-allow-ingress",
            "source_ranges": [
              "10.3.0.0/20",
              "10.3.16.0/20",
              "10.4.0.0/20",
              "10.4.16.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "private"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_private",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_restricted_network_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-06-21T09:30:18.452-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "example-private-cluster-network-ys0q-allow-restricted-inbound",
            "name": "example-private-cluster-network-ys0q-allow-restricted-inbound",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/global/networks/example-private-cluster-network-ys0q-network",
            "priority": 1000,
            "project": "fast-planet-243821",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/global/firewalls/example-private-cluster-network-ys0q-allow-restricted-inbound",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "private",
              "private-persistence"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "private-persistence"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public_allow_all_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-06-21T09:30:18.200-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "example-private-cluster-network-ys0q-public-allow-ingress",
            "name": "example-private-cluster-network-ys0q-public-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/global/networks/example-private-cluster-network-ys0q-network",
            "priority": 1000,
            "project": "fast-planet-243821",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/global/firewalls/example-private-cluster-network-ys0q-public-allow-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "example-private-cluster-network-ys0q-network",
            "name": "example-private-cluster-network-ys0q-network",
            "project": "fast-planet-243821",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/global/networks/example-private-cluster-network-ys0q-network"
          },
          "dependencies": [
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc_router",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-21T09:30:18.305-07:00",
            "id": "europe-west2/example-private-cluster-network-ys0q-router",
            "name": "example-private-cluster-network-ys0q-router",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/global/networks/example-private-cluster-network-ys0q-network",
            "project": "fast-planet-243821",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/regions/europe-west2/routers/example-private-cluster-network-ys0q-router"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "vpc_nat",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 0,
            "id": "europe-west2/example-private-cluster-network-ys0q-router/example-private-cluster-network-ys0q-nat",
            "min_ports_per_vm": 0,
            "name": "example-private-cluster-network-ys0q-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "fast-planet-243821",
            "region": "europe-west2",
            "router": "example-private-cluster-network-ys0q-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/regions/europe-west2/subnetworks/example-private-cluster-network-ys0q-subnetwork-public",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 0,
            "tcp_transitory_idle_timeout_sec": 0,
            "udp_idle_timeout_sec": 0
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_router.vpc_router",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_private",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-21T09:30:18.474-07:00",
            "enable_flow_logs": true,
            "fingerprint": "fDrKdX-XzYE=",
            "gateway_address": "10.3.16.1",
            "id": "europe-west2/example-private-cluster-network-ys0q-subnetwork-private",
            "ip_cidr_range": "10.3.16.0/20",
            "name": "example-private-cluster-network-ys0q-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/global/networks/example-private-cluster-network-ys0q-network",
            "private_ip_google_access": true,
            "project": "fast-planet-243821",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/regions/europe-west2/subnetworks/example-private-cluster-network-ys0q-subnetwork-private"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_public",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-21T09:30:18.851-07:00",
            "enable_flow_logs": true,
            "fingerprint": "n3mZaoQI6EA=",
            "gateway_address": "10.3.0.1",
            "id": "europe-west2/example-private-cluster-network-ys0q-subnetwork-public",
            "ip_cidr_range": "10.3.0.0/20",
            "name": "example-private-cluster-network-ys0q-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/global/networks/example-private-cluster-network-ys0q-network",
            "private_ip_google_access": true,
            "project": "fast-planet-243821",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-planet-243821/regions/europe-west2/subnetworks/example-private-cluster-network-ys0q-subnetwork-public"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    }
  ]
}